# meal-community-backend

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
backend/: __main__.py
backend/adapters/controllers/endpoint/: __init__.py
backend/application/: config.py  exceptions.py  sanic.py  server.py
backend/application/dtos/: comment.py  meal.py  rating.py  refresh_token.py  school.py  timetable.py  user.py
backend/application/endpoint/: __init__.py
backend/application/endpoint/api/: __init__.py  user.py
backend/application/endpoint/user/: __init__.py  register.py
backend/application/use_cases/create/: comment.py  meal.py  rating.py  refresh_token.py  timetable.py  user.py
backend/application/use_cases/delete/: refresh_token.py  user.py
backend/application/use_cases/get/: calorie.py  comment.py  meal.py  rating.py  refresh_token.py  school.py  school_info.py  timetable.py  user.py
backend/domain/: enum.py  utils.py
backend/domain/entities/: calorie.py  comment.py  meal.py  rating.py  refresh_token.py  school.py  school_info.py  timetable.py  user.py
backend/domain/entity/: article.py  board.py  comment.py  meal.py  user.py
backend/domain/repositories/: calorie.py  comment.py  meal.py  rating.py  refresh_token.py  school.py  school_info.py  timetable.py  user.py
backend/domain/repository/: user.py
backend/infrastructure/: argparser.py  config.py  datetime.py  error.py  jwt.py  sanic.py  server.py
backend/infrastructure/sqlalchemy/: __init__.py  mixin.py
frontend/: index.html
frontend/assets/: index-BvAywjQo.js  index-SnupNpIM.css
(+36 files in other folders)
