[project]
name = "meal-community-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Ryu Juheon",email = "saidbysolo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sanic (>=24.12.0,<25.0.0)",
    "aiohttp (>=3.11.14,<4.0.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "sanic-ext (>=24.12.0,<25.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "valkey (>=6.1.0,<7.0.0)",
    "neispy (>=5.0.2,<6.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

